# OpenNeutron

./: .gitignore  Cargo.toml  Dockerfile  E2EE_PROTOCOL.md  KEY_DERIVATION.md  README.md  api.md  config.yml  docker-compose.yml  docker-entrypoint.sh
data/static/: index.html
data/static/assets/: index-9OAyAqkO.css  index-B9SOgcQ6.js  index-DJOdzI5_.js  index-Y9lXDpPe.css
src/: config.rs  main.rs
src/api/: dto.rs  mod.rs  router.rs
src/api/controllers/: auth_controller.rs
src/api/endpoints/: admin.rs  auth.rs  email.rs  group.rs  mod.rs  user.rs
src/core/: email.rs  mod.rs  user.rs
src/smtp/: email_receiving_fsm.rs  email_sending_fsm.rs  maybe_tls_client_stream.rs  maybe_tls_stream.rs  mod.rs  received_email.rs
src/utils/: cryptography.rs  dkim.rs  emailutils.rs  jwt.rs  mod.rs  timeutils.rs
